attempt spacing fixes

--- a/packages/reporter/src/attempts/attempts.scss
+++ b/packages/reporter/src/attempts/attempts.scss
@@ -110,7 +110,7 @@
       font-size: 14px;
       gap: 8px;
       width: 100%;
-      padding: 8px 10px 8px 9px;
+      padding: 8px 8px 8px 9px;
       position: relative;
       user-select: none;
       cursor: pointer;
