--- a/packages/reporter/src/runnables/runnables.scss
+++ b/packages/reporter/src/runnables/runnables.scss
@@ -136,7 +136,7 @@
         }
 
         .collapsible-header-inner {
-          padding: 8px 4px;
+          padding: 8px 8px 8px 6px;
           display: inline-flex;
           align-items: center;
           height: 100%;
